--- a/ukazka_01.ipynb
+++ b/ukazka_01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ukázkový IPython Notebook pro hledací kroužek"
+    "# Druhy vstupu"
    ]
   },
   {
@@ -12,13 +12,6 @@
    "metadata": {},
    "source": [
     "-----------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Druhy vstupu"
    ]
   },
   {
@@ -43,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Python"
+    "## 1. Python"
    ]
   },
   {
@@ -109,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Markdown"
+    "## 2. Markdown"
    ]
   },
   {
@@ -166,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 HTML přes magic"
+    "## 3. HTML přes magic"
    ]
   },
   {
