--- a/export.ipynb
+++ b/export.ipynb
@@ -82,11 +82,11 @@
     }
    ],
    "source": [
-    "%%latex\n",
+    "#%%latex\n",
     "\n",
-    "\\begin{align}\n",
-    "  \\alpha + \\beta = \\gamma\n",
-    "\\end{align}"
+    "#\\begin{align}\n",
+    "#  \\alpha + \\beta = \\gamma\n",
+    "#\\end{align}"
    ]
   },
   {
