--- a/druhy_vstupu.ipynb
+++ b/druhy_vstupu.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWwAAAEKCAYAAAA2Mm/+AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADUpJREFUeJzt3W2wrWVdx/HvT47ykDwMWWI8dLSJxARGJo0mjSVanVEK\nKkegglONTk052YsKrZnYb3KaGqacYRpTgZFGQQFTCSswXRNRYwoHQQ6EVowh8qCg0MOEwL8Xa50z\n+2zWfuDe91qb6z7fz8yaWete972ua50XXy6uvfbaqSokSc9+z9nqCUiSNsZgS1IjDLYkNcJgS1Ij\nDLYkNcJgS1IjDLYkNcJgq1lJ7knyP0keTfJIkpuS/GqSrDhvnOThJM+dPn5Pksemt/9L8viyx9dN\nz0mSf09yx1a8N2kWg62WFXBGVR0GHAf8EXABcMmeE5JsB14FPAicCVBVv1ZVh1bVocC7gCv3PK6q\nN04v/THgQOC7kvzQgt6PtCaDrUGoqseq6lrgbGBnkpdNnzof+BTwl8DOGZdmeltpJ3AN8PFVrpMW\nzmBrUKrqc8C9wGumh84HPgx8BPjJJN+93mskOQT4uWXXnbNnO0XaSgZbQ3QfcGSSVwNHA5+oqi8B\nu4Gf38D1Pws8WlU3AZ+eHnvjGudLC2GwNURHAw8z2cq4vqoemx6/io1tb+wEPgpQVU8CH9vgddJc\nbdvqCUh9SvJKJsG+Cfhj4DlJvjZ9+kDgiCQnVdVt02O14vpjgNOBVyZ58/TwIcBBSb6zqr4x9zch\nrcIVtloXgCSHJTkDuILJDxhPBJ4ATgBOnt5OAG5ksq+9z/XLnAfcBRy/7LrjmeyLnzu3dyFtgCts\nte7aJE8ATzHZo74I+AvgOuDSqrp3+clJLgbeneR3q+opJivs5avs84GLq+rBFde9Z89zc3sn0jri\nHzCQpDa4JSJJjTDYktQIgy1JjTDYktSIuX1KJIk/zZSkDqpq1vfbzHeFXVVbcrvwwgsd15s3b03e\n1uKWiCQ1wmBLUiMGGezRaOS4kgZnbr/pmKTm9dqSNFRJqK34oaMkqT8GW5IaYbAlqREGW5IaYbAl\nqREGW5IasWawk1ya5IEkty879idJ7kzyhSQfTXL4/KcpSVpvhX0ZsGPFseuBH6yqk4G7gXfOY2KS\npH2tGeyquhF4ZMWxG2ryt/AAPgscM6e5SZKW2ewe9q8An+xjIpKktXUOdpLfBx6vqg/1OB9J0io6\n/QGDJL8EvAF43VrnLS0t7b0/Go0G/yVFycxf/++V388iDct4PGY8Hm/o3HW//CnJduDaqjpx+ngH\ncBFwWlV9fY3r9rsvf5oEe57vOQZbGri1vvxpzWAnuQI4DXgB8ABwIZNPhTwPeHh62j9X1a/PuNZg\n9z+CwZYGrnOwNzmowe5/BIMtDZxfrypJA2CwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakR\nBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluS\nGmGwJakRBluSGmGwJakRBluSGmGwJakRawY7yaVJHkhy+7JjRya5IcndSa5PcsT8pylJWm+FfRmw\nY8WxdwA3VNXxwN9PH0uS5mzNYFfVjcAjKw7/NPCB6f0PAGfNYV6SpBW67GG/sKoemN5/AHhhj/OR\nJK1i22YurqpKUqs9v7S0tPf+aDRiNBptZjhJGpzxeMx4PN7QualatbeTE5LtwLVVdeL08V3AqKru\nT/Ii4DNV9dIZ19V6rz00SYB5vuewv/2bSvubJFRVZj3XZUvkE8DO6f2dwMe6TkyStHFrrrCTXAGc\nBryAyX71HwAfBz4CHAfcA7y5qr4541pX2P2P4ApbGri1VtjrbolsYlCD3f8IBlsauL63RCRJW8Bg\nS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1Ij\nDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNcJgS1IjDLYkNaJzsJO8M8kd\nSW5P8qEkB/Y5MUnSvjoFO8l24K3AKVV1InAAcE5/05IkrbSt43WPAt8GDknyJHAI8NXeZiVJeppO\nK+yqehi4CPgKcB/wzar6VJ8TkyTtq9MKO8n3Ab8FbAe+BVyV5Beq6oPLz1taWtp7fzQaMRqNus5T\nkgZpPB4zHo83dG6q6hkPkORs4Mer6i3Tx+cBp1bVbyw7p7q8dsuSAPN8z2F/+zeV9jdJqKrMeq7r\np0TuAk5NcnAmlXo9sLvrBCVJ6+u6h/0F4HLg88Bt08Pv7WtSkqSn67QlsqEXdktkHiO4JSIN3Dy2\nRCRJC2awJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluS\nGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGmGwJakRBluSGtE5\n2EmOSHJ1kjuT7E5yap8TkyTta9smrn038MmqelOSbcB39DQnSdIMqapnflFyOLCrql6yxjnV5bVb\nlgSY53sO+9u/qbS/SUJVZdZzXbdEXgw8lOSyJLckeV+SQ7pPUZK0nq7B3gacAvx5VZ0C/Dfwjt5m\nJUl6mq572PcC91bV56aPr2ZGsJeWlvbeH41GjEajjsNJ0jCNx2PG4/GGzu20hw2Q5B+At1TV3UmW\ngIOr6oJlz7uH3f8I7mFLA7fWHvZmgn0y8H7gecC/Ab9cVd9a9rzB7n8Egy0N3FyCvYFBDXb/Ixhs\naeDm8SkRSdKCGWxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJ\naoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTBlqRGGGxJaoTB\nlqRGGGxJasSmgp3kgCS7klzb14QkSbNtdoX9dmA3UD3MRZK0hs7BTnIM8Abg/UB6m5EkaabNrLD/\nFPgd4Kme5iJJWsO2LhclOQN4sKp2JRmtdt7S0tLe+6PRiNFo1VN7lcx/wV/lLpCkzRuPx4zH4w2d\nmy7hSfIu4DzgCeAg4DDgmqo6f9k5tVVRmwR7nmNnZrC3alxJw5GEqpq56uwU7BUvfhrw21X1UyuO\nG+wFjStpONYKdl+fw7YikjRnm15hr/rCrrAXNq6k4VjECluSNGcGW5IaYbAlqREGW5IaYbAlqREG\nW5IaYbAlqREGW5IaYbAlqREGW5IaYbAlqREGW5Ia0ekPGOjZZRF/sAH8ow3SVjPYgzHvmPpnO6Wt\n5paIJDXCYEtSIwy2JDXCYEtSIwy2JDXCYEtSIwy2JDXCYEtSIwy2JDXCYEtSIwy2JDWiU7CTHJvk\nM0nuSPLFJL/Z98QkSftKl29gS3IUcFRV3Zrk+cDNwFlVdeeyc2qrvt1t8u118xw7M7+5brjjrj62\npH4loapmfttapxV2Vd1fVbdO7/8XcCfwPd2nKElaz6b3sJNsB14BfHazryVJWt2mvg97uh1yNfD2\n6Up7H0tLS3vvj0YjRqPRZoaTpMEZj8eMx+MNndtpDxsgyXOBvwb+pqr+bMbz7mEPZtzVx5bUr973\nsDMpxCXA7lmxliT1r+se9o8Cvwi8Nsmu6W1Hj/OSJK3QeUtk3Rd2S2RA464+tqR+9b4lIklaPIMt\nSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w\n2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUCIMtSY0w2JLUiM7BTrIjyV1J\nvpTkgj4nJUl6uk7BTnIAcDGwA3gZcG6SE/qcmCRpX11X2K8CvlxV91TVt4ErgTP7m5YkaaWuwT4a\n+M9lj++dHpMkzUnXYFevs5AkrWtbx+u+Chy77PGxTFbZ+0jS8eX7MN+xV39vwxx37bElLUKqnvli\nOck24F+B1wH3Af8CnFtVd/Y7PUnSHp1W2FX1RJK3AX8HHABcYqwlab46rbAlSYs3qN90THJWkqeS\n/MCCxz0qyZVJvpzk80muS/L9Cxj3ySS7ktya5OYkPzLvMSVtnUGtsJN8GDgYuKWqlhY0ZoB/Ai6r\nqvdOj50EHFZV/zjnsR+rqkOn938C+L2qGs1zTElbZzAr7CTPB34YeBtw9gKHfi3w+J5YA1TVbfOO\n9QyHAw8veExJC9T1Y33PRmcCf1tVX0nyUJJTquqWBYz7cuDmBYwzy8FJdgEHAS8CTt+ieUhagMGs\nsIFzgaum96+aPl6ErdxT+t+qekVVncDke10u38K5SJqzQexhJzmSya/KP8QkoAcAVVXfu4CxTwcu\nrKrT5j3WjLH37mFPH98PvLyqvr7ouUiav6GssN8EXF5V26vqxVV1HPAfSV4z74Gr6tPAgUneuudY\nkpOSvHreYy+X5KVM/kP1jUWOK2lxhhLsc4C/WnHsmunxRfgZ4PXTj/V9EfhD4GsLGPfg6cf6djH5\nxsTzawj/yyRppkFsiUjS/mAoK2xJGjyDLUmNMNiS1AiDLUmNMNiS1AiDLUmNMNiS1AiDLUmN+H+4\nz4AZrK7ZswAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWwAAAEKCAYAAAA2Mm/+AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADARJREFUeJzt3WuMrGdBwPH/yOFW6QGOREAuqRIQ1EIgYjBgOiKYghCI\n4SIiVA1glCh+kAAxkf3kBwlRP3iJIiQYQS0QoAIGEKYSRORSyqWtUOQiRS5aoEc0cls/zLQs2z3n\nbGdndvvM+f2SzZl5933f55lN+Pfl2XdnCgAAAAAAAAAAAAAAOFt8svqf6rrqS9U7q1+pJrv2m1XX\nVrdcPP/T6uTi6/+qr+14/obFPpPq36qPrGvyAGeTT1QPXzw+t3ps88i+dMc+5zWP+lXVE/Y4xwur\nl++x/YLqmuoL1Y+uZrpwMN911BOAFTlZXVI9ubqo+qHF9qdXb63+crF9t0k3viJvse+rq9ed4jgA\nboKdV9g7far50kjV1dVTq3s3X/r43l37bjWP+U7nVF+pHlo9svpi315OgSPjCptN9NnqRPWw6m7V\n66uPVVdUP7+P43+2+br4O6u3Lbb9zOqnCTeNYLOJ7tb8l4wXVW9uvlxSdXH7W964qHrN4vE3q9fu\n8zhYq2NHPQFYsQc3D/Y7q99rflHyH4vv3bq6Q3X/6oOLbdu7jr9782WWB1dPWmw7p7pN9T3Vf61r\n4nAmrrAZ3fW/MDxePaZ6ZfM16fOrb1T3qx6w+Lpf9Y7mv4jcffz1ntb8jpL77DjuPtVnqqes5RUA\nnAU+0bfvw/5y9U/Vrza/EHlT9aI9jnli8zXu6y9Wdt/Wd2X17D2Oe271LyuZNQAAAAAAAAAchb3e\nQ2ElLrjggu1LL710XacH2FSXVtO9vrG2YFfb29u7/ybhcGxtbbW1tWVcYDiTyaRO0WZ/OAMwCMEG\nGMRGBns6nRoX2DgbuYYNMCpr2AAbQLABBiHYAIMQbIBBCDbAIAQbYBBnCvZLq89XH9qx7UXNP5Xj\n8uYfVHr79UwNgJ3OFOyXVRfu2vbm6oebf9bdR6sXrGFeAOxypmC/o/rSrm1vqb61ePzu5p8yDcCa\nHXQN+5erN65iIgCc3kGC/dvV16pXrGguAJzGsSWP+8Xq0dVPnW6nne/RPJ1ON/5Nio4fP9HJk7tX\nkFbn3HPv2HXXXbu28wOHbzabNZvN9rXvft786bzqkur8xfMLqxdXF1T/eZrjzro3f5q/acs6X/Ok\ns+1nCmeb073505mC/crmYb5T89v7Xtj8rpBbVddf6r2r+rU9jhXs1Y8g2LDhDhLsgxDs1Y8g2LDh\nvL0qwAYQbIBBCDbAIAQbYBCCDTAIwQYYhGADDEKwAQYh2ACDEGyAQQg2wCAEG2AQgg0wCMEGGIRg\nAwxCsAEGIdgAgxBsgEEINsAgBBtgEIINMAjBBhiEYAMMQrABBiHYAIMQbIBBnCnYL60+X31ox7YT\n1Vuqj1Zvru6wnqkBsNOZgv2y6sJd257fPNj3qf5h8RyANZvsY5/zqkuq8xfPr6ouaH7lfZdqVt13\nj+O2t7e3Dz7DgUwmk2qdr3nS2fYzhbPNvCN7t3mZNew7N491i3/vvNy0ALgpjh3w+O1Oc0m5tbV1\nw+PpdNp0Oj3gcACbZTabNZvN9rXvsksi0+pz1V2rt2dJpLIkAhzcqpdEXl9dtHh8UfXa5aYFwE1x\npivsVzb/BeOdmq9X/071uupvq3tWn6yeVH15j2NdYa9+BFfYsOFOd4W9nyWRZQn26kcQbNhwq14S\nAeAICDbAIAQbYBCCDTAIwQYYhGADDEKwAQYh2ACDEGyAQQg2wCAEG2AQgg0wCMEGGIRgAwxCsAEG\nIdgAgxBsgEEINsAgBBtgEIINMAjBBhiEYAMMQrABBiHYAIMQbIBBHCTYL6g+Un2oekV165XMCIA9\nLRvs86pnVg+qzq9uUf3ciuYEwB6OLXncddXXq3Oqby7+vWZVkwLgxpa9wr62enH16eqz1Zert65q\nUgDc2LJX2PeqfrP50shXqourp1Z/tXOnra2tGx5Pp9Om0+mSwwFsptls1mw229e+kyXHeHL1yOoZ\ni+dPqx5SPXvHPtvb29tLnn5Mk8mkWudrnnS2/UzhbDPvyN5tXnZJ5Krmgb7t4sSPqK5Y8lwA7MOy\nwb68enn13uqDi21/tpIZAbCnZZdE9sOSyOpHsCQCG24dSyIAHDLBBhiEYAMMQrABBiHYAIMQbIBB\nCDbAIAQbYBCCDTAIwQYYhGADDEKwAQYh2ACDEGyAQQg2wCAEG2AQgg0wCMEGGIRgAwxCsAEGIdgA\ngxBsgEEINsAgBBtgEIINMIiDBPsO1auqK6srqoesZEYA7OnYAY79w+qN1RMW5/nulcwIgD1Nljzu\n9tVl1Q+cZp/t7e3tJU8/pslkUq3zNU86236mcLaZd2TvNi+7JPL91Rerl1Xvr/68OmfJcwGwD8sG\n+1j1oOqPF/9+tXr+qiYFwI0tu4b9mcXXexbPX9Uewd7a2rrh8XQ6bTqdLjkcwGaazWbNZrN97bvs\nGnbVP1bPqD5abVW3rZ634/vWsFc/gjVs2HCnW8M+SLAfUL2kulX18eqXqq/s+L5gr34EwYYNt65g\nn4lgr34EwYYNt467RAA4ZIINMAjBBhiEYAMMQrABBiHYAIMQbIBBCDbAIAQbYBCCDTAIwQYYhGAD\nDEKwAQYh2ACDEGyAQQg2wCAEG2AQgg0wCMEGGIRgAwxCsAEGIdgAgxBsgEEINsAgBBtgEIINMIiD\nBvsW1WXVJSuYCwCncdBgP6e6otpewVwAOI2DBPvu1aOrl1ST1UwHgFM5SLB/v3pu9a0VzQWA0zi2\n5HGPqb7QfP16eqqdtra2bng8nU6bTk+560odP36ikye/tLbzn3vuHbvuumvXdn7g7DGbzZrNZvva\nd9mljN+tnlZ9o7pNdbx6dfX0Hftsb28fzdL2ZDJpvcvqk/Z6bUc1LrA55h3Zu82rWHu+oPqt6rG7\ntgv2IY0LbI7TBXtV92GrCMCarfPuDlfYhzQusDkO4wobgDUTbIBBCDbAIAQbYBCCDTAIwQYYhGAD\nDEKwAQYh2ACDEGyAQQg2wCAEG2AQgr0Bjh8/0WQyWevX8eMnjvplwlnPu/UtN8LN6t361j/uqccG\nVsu79QFsAMEGGIRgAwxCsAEGIdgAgxBsgEEINsAgBBtgEIINMAjBBhiEYAMMYtlg36N6e/WR6sPV\nb6xsRgDsadk3f7rL4usD1e2q91WPr67csY83f9qYcU89NrBa63jzp881j3XVfzcP9fcteS4A9mEV\na9jnVQ+s3r2CcwFwCscOePztqldVz2l+pf0dtra2bng8nU6bTqcHHA5gs8xms2az2b72PcgHGNyy\n+rvqTdUf7PF9a9gbM+6pxwZWax1r2JPqL6or2jvWAKzYssF+aPUL1U9Wly2+LlzVpAC4MZ/puNwI\nlkSAtfCZjgAbQLABBiHYAIMQbIBBCDbAIAQbYBCCDTAIwQYYhGADDEKwAQYh2ACDEGyAQQg2wCAE\nG2AQgg0wCMEGGIRgAwxCsAEGIdgAgxBsgEEINsAgBBtgEIINMAjBBhiEYAMM4iDBvrC6qvpY9bzV\nTAeAU5ksedwtqn+tHlFdU72nekp15Y59tre3tw82uyVNJpNqnWNP2uu1be64px4bWK35/573bvOy\nV9g/Vl1dfbL6evXX1eOWPBcA+7BssO9W/fuO559ZbANgTZYNtv9vDHDIji153DXVPXY8v0fzq+yd\nLp9MJg9Y8vwrsOzy/D7PPjnV+Tdz3NOPDazQ5as+4bHq49V51a2qD1T3W/UgAKzGo5rfKXJ19YIj\nngsAALAOj6++Vf3gIY97l+a3Nl5dvbd6Q3XvQxj3m9VlzZek3lf9+CGMCbASf1O9vto6xDEn1buq\nZ+3Ydv/qYYcw9skdj3+6mh3CmAAHdrvmf8hzz77zLy7X7eHVpYc43k47g/3E6jVHNA/gECx7W9/N\n0eOqv68+XX2xelD1/kMY90eaL0cchds2XxK5TXXX5v/xADbUJr1b31OqixePL148PwxH+UdE/1s9\nsPktlRdWLz/CuQDsy4nqq82XRD7R/Cr7U4c09s1lSaTqc9WdjmIiAPv1rOpPdm2bVT9xSOP/c/XM\nHc+P4peO922+FOTPEYGbtbc1v0tip1+v/uiQxr9r8ztUrq4+XF1S3esQxv1G8zXs62/te9QhjAkA\nAAAAAAAAAAAAAAAAq/P/J+lL2aoMdm0AAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x4047ad0>"
+       "<matplotlib.figure.Figure at 0x7f618080ce90>"
       ]
      },
      "metadata": {},
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ## nadpisy\n",
+    "* nadpisy\n",
     "* odrážkové listy\n",
     "  * a\n",
     "  * b \n",
@@ -215,7 +215,7 @@
    "metadata": {},
    "source": [
     "### 2.2 Obrázky přímo v Markdownu: \n",
-    "![](http://www.clker.com/cliparts/n/5/p/D/9/H/glossy-black-icon-button-th.png \"Volitelný popisek k obrázku\")"
+    "![](button.png)"
    ]
   },
   {
@@ -236,8 +236,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 $ \\LaTeX $ v Markdownu:\n",
-    "* $ \\alpha + \\beta = \\gamma $\n",
+    "### 2.4 LaTeX v Markdownu:\n",
+    "* $$ \\alpha + \\beta = \\gamma $$\n",
     "* The big sum: $$ \\sum_{i = 0}^{i = \\infty}{x ^ 2} $$\n"
    ]
   },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -364,15 +364,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 28K\n",
-      "drwxr-xr-x 4 krystof krystof  125 zář 21 10:37 .\n",
-      "drwxr-xr-x 4 krystof krystof  144 zář 21 10:34 ..\n",
-      "-rw-r--r-- 1 krystof krystof 4,4K zář 21 10:37 druhy_vstupu.ipynb\n",
-      "-rw-r--r-- 1 krystof krystof 1,6K zář 21 10:37 druhy_vstupu.py\n",
-      "drwxr-xr-x 8 krystof krystof  152 zář 21 10:34 .git\n",
-      "-rw-r--r-- 1 krystof krystof 9,0K zář 21 10:34 grafiky.ipynb\n",
-      "drwxr-xr-x 2 krystof krystof   42 zář 21 10:37 .ipynb_checkpoints\n",
-      "-rw-r--r-- 1 krystof krystof   18 zář 21 10:34 README.md\n"
+      "total 468K\n",
+      "drwxrwxr-x 6 krystof krystof 4,0K zář 23 10:06 .\n",
+      "drwxr-xr-x 9 krystof krystof 4,0K zář 23 08:21 ..\n",
+      "-rw-rw-r-- 1 krystof krystof  20K zář 23 08:21 brnenske_vychytavky.ipynb\n",
+      "-rw-rw-r-- 1 krystof krystof 2,3K zář 23 08:27 button.png\n",
+      "drwxr-xr-x 2 krystof krystof 4,0K zář 23 08:54 druhy_vstupu_files\n",
+      "-rw-rw-r-- 1 krystof krystof  14K zář 23 10:06 druhy_vstupu.ipynb\n",
+      "-rw-rw-r-- 1 krystof krystof  45K zář 23 09:51 druhy_vstupu.log\n",
+      "-rw-rw-r-- 1 krystof krystof 3,9K zář 23 09:58 druhy_vstupu.md\n",
+      "-rw-rw-r-- 1 krystof krystof  50K zář 23 09:58 druhy_vstupu.pdf\n",
+      "-rw-rw-r-- 1 krystof krystof  21K zář 23 08:55 druhy_vstupu.tex\n",
+      "-rw-rw-r-- 1 krystof krystof 2,9K zář 23 08:21 export.ipynb\n",
+      "-rw-rw-r-- 1 krystof krystof  81K zář 23 08:45 export.pdf\n",
+      "drwxrwxr-x 8 krystof krystof 4,0K zář 23 08:21 .git\n",
+      "-rw-rw-r-- 1 krystof krystof  59K zář 23 08:21 grafiky.ipynb\n",
+      "-rw-rw-r-- 1 krystof krystof  773 zář 23 08:21 importeni_1.ipynb\n",
+      "-rw-rw-r-- 1 krystof krystof 3,6K zář 23 08:21 importeni_2.ipynb\n",
+      "drwxrwxr-x 3 krystof krystof 4,0K zář 23 08:21 importeni_sub_folder\n",
+      "drwxr-xr-x 2 krystof krystof 4,0K zář 23 08:23 .ipynb_checkpoints\n",
+      "-rw-rw-r-- 1 krystof krystof   18 zář 23 08:21 README.md\n",
+      "-rw-rw-r-- 1 krystof krystof 1,1K zář 23 08:21 zkratky.ipynb\n"
      ]
     }
    ],
@@ -384,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "games:x:5:60:games:/usr/games:/bin/sh\n"
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n"
      ]
     }
    ],
@@ -420,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
