--- a/export.ipynb
+++ b/export.ipynb
@@ -33,6 +33,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* HTML funguje dobře\n",
+    "* PDFka mají různé problémy (s Latexem v markdownu, s obrázkama, se syntax highlightingem)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -133,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
