--- a/importeni_sub_folder/importeni_definice_scitej.ipynb
+++ b/importeni_sub_folder/importeni_definice_scitej.ipynb
@@ -4,39 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importění Pythoního kódu mezi notebookama (1)"
+    "# Importění Pythoního kódu mezi notebookama - definice scitej"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def say_hello():\n",
-    "    print(\"HELLO!\")"
+    "def scitej(a, b):\n",
+    "    return a + b"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
