--- a/uvod.ipynb
+++ b/uvod.ipynb
@@ -4,27 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obsah"
+    "# Úvod"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [Úvod](uvod.ipynb)\n",
-    "* [Spuštění](spusteni.ipynb)\n",
-    "* Základní vytvoření notebooku\n",
-    "* New Text File -> EDITOR\n",
-    "* Terminál\n",
-    "* [Druhy vstupu](druhy_vstupu.ipynb)\n",
-    "* [Importění](importeni.ipynb)\n",
-    "* [Grafíky](grafiky.ipynb)\n",
-    "* [Export](export.ipynb)\n",
-    "* [R-ko](r_ko.ipynb)\n",
-    "* [Julia](julia.ipynb)\n",
-    "* [Zkratky](zkratky.ipynb)\n",
-    "* [Unicode identifikátory](unicode.ipynb)\n",
-    "* [JupyterHub](https://github.com/jupyter/jupyterhub/blob/master/docs/getting-started.md)"
+    "* __Ipython Notebook__ vs. __Jupyther__\n",
+    "* __Jupyther__ = __Ju__lia + __Pyth__on + __R__\n",
+    "* Galileo 1610"
    ]
   }
  ],
